made changes in the pillar pages

--- a/about.html
+++ b/about.html
@@ -28,19 +28,16 @@
                 </div>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <!-- <li><a href="#who-we-are" class="nav-link">Who We Are</a></li>
-                    <li><a href="#ecosystem" class="nav-link">Ecosystem</a></li>
-                    <li><a href="#impact" class="nav-link">Impact</a></li>
-                    <li><a href="#traction" class="nav-link">Traction</a></li>
-                    <li><a href="#contact" class="nav-link">Contact</a></li>
-                </ul> -->
+                    <li><a href="/invest.html" class="nav-link">Invest</a></li>
+                    <li><a href="/contact.html" class="nav-link">Contact</a></li>
+                </ul>
             </nav>
         </div>
     </header>
 
     <main>
         <!-- Hero Section -->
-        <section class="hero about-hero" id="hero">
+        <section class="about-hero" id="hero">
             <div class="hero-overlay"></div>
             <div class="container">
                 <div class="hero-content">
@@ -140,8 +137,8 @@
                             This is the rise of self-defined modernity.
                             This is the Ausum Life.
                             This is our story. It’s an invitation to build, to partner, and to co-create that future
-                            with us.
-                            Welcome to Ausum Group.</p>
+                            with us.</p>
+                        <p>Welcome to Ausum Group.</p>
                     </div>
                 </div>
                 <blockquote class="quote personal-quote">
@@ -159,26 +156,34 @@
                 </div>
                 <div class="mission-content">
                     <div class="mission-image">
-                        <img src="/dennis-ceo-ausum - Copy - Copy.jpg" alt="CEO of Ausum Group" class="img-responsive">
+                        <img src="/dennis-ceo-ausum.jpg" alt="CEO of Ausum Group" class="img-responsive">
                     </div>
                     <div class="mission-text">
                         <h3>About the Founder</h3>
-                        <p>For over a decade, Dennis Musau lived the hustle—one shaped by grit, humility, and hands-on
-                            survival from a shopkeeper, service station manager, bakery runner, mall operator, sales
-                            rep,
-                            makeshift accountant. One job after another. Not glamorous. But deeply human. And quietly
-                            preparing him for something greater.</p>
-                        <p> The turning point? Four years in the eyewear industry, rising from a merchandiser to account
-                            manager at a global company. That journey unlocked a truth: <strong> corporate path isn’t
-                                always
-                                the calling—especially when your soul burns to build what doesn’t yet exist.</strong>
+                        <p>Dennis Musau’s journey began in law school—but his conviction pulled him in another
+                            direction. Dropping out wasn’t failure; it was a deliberate act of ownership. A decision to
+                            choose purpose over prestige. What followed was a decade-long stretch of grit: shopkeeper,
+                            service station manager, bakery runner, mall operator, sales rep, makeshift accountant. Job
+                            after job. Hustle after hustle. Not glamorous, but deeply human. Every step shaping a
+                            builder.
+                            .</p>
+                        <p>The turning point came in the eyewear industry, where in four years, Dennis rose from
+                            merchandiser to executive account manager at a global company. That chapter revealed a
+                            deeper truth: <strong> corporate path isn’t always the calling-especially when your soul
+                                burns to
+                                build what doesn’t yet exist.</strong>
                         </p>
-                        <p><strong>Ausum Group </strong> was born from that tension. From lived experience. From knowing
-                            how it feels to
-                            have more vision than capital. More ideas than opportunities. And still daring to believe.
-                            It’s a platform shaped by faith, resilience, and the quiet conviction that Africa doesn’t
-                            lack
-                            talent—it lacks belief, backing, and systems that allow builders to thrive.</p>
+                        <p><strong>Ausum Group</strong> was born from that tension. From lived frustration. From knowing
+                            the weight of
+                            having more vision than capital, more ideas than opportunities. But still choosing to
+                            believe. Built on faith, resilience, and relentless clarity, Ausum exists to prove that
+                            Africa doesn’t lack talent—it lacks belief, backing, and structures that let builders
+                            thrive.
+                        </p>
+                        <p>Today, Dennis leads Ausum Group not from a pedestal, but from the ground up—walking the talk.
+                            His story is the seed of a bigger movement: one that dares to imagine freedom beyond
+                            survival, and legacy beyond ego. Because for Dennis, this isn’t just business. It’s
+                            personal. It’s prophetic. And it’s just the beginning.</p>
                     </div>
                 </div>
             </div>
