--- a/appeals.html
+++ b/appeals.html
@@ -28,10 +28,8 @@
                 </div>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="#overview" class="nav-link">Overview</a></li>
-                    <li><a href="#offerings" class="nav-link">Offerings</a></li>
-                    <li><a href="#vision" class="nav-link">Vision</a></li>
-                    <li><a href="#contact" class="nav-link">Contact</a></li>
+                    <li><a href="#overview" class="nav-link">Vision</a></li>
+                    <li><a href="#offerings" class="nav-link">Model</a></li>
                 </ul>
             </nav>
         </div>
@@ -44,9 +42,7 @@
             <div class="hero-overlay"></div>
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">See the World. Express Yourself.</h1>
-                    <p class="hero-subtitle">Premium eyewear that celebrates African creativity and modern
-                        self-expression.</p>
+                    <h1 class="hero-title">Eyewear that speaks before you do.</h1>
                 </div>
             </div>
         </section>
@@ -60,17 +56,13 @@
                 </div>
                 <div class="about-content">
                     <div class="about-text">
-                        <p class="about-intro">Ausum Appeals is revolutionizing the African eyewear industry by
-                            combining premium quality, cultural authenticity, and technological innovation. We're not
-                            just selling eyewear; we're crafting a new narrative of African self-expression.</p>
-                        <blockquote class="quote">
-                            <p>"Vision is not just about seeing clearly—it's about expressing who you are and how you
-                                see the world."</p>
-                            <cite>— Ausum Appeals Team</cite>
-                        </blockquote>
+                        <p class="about-intro">Ausum Appeals is transforming the eyewear experience in Africa by
+                            combining premium, design-forward eyewear with a modern, tech-driven shopping journey. From
+                            stylish in-store spaces to intelligent online tools like virtual fittings, we empower
+                            discerning consumers to see — and be seen — differently.</p>
                     </div>
                     <div class="about-image">
-                        <img src="https://images.pexels.com/photos/2228583/pexels-photo-2228583.jpeg"
+                        <img src="https://images.unsplash.com/photo-1617791932882-a70117e3564d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8ZXlld2VhcnxlbnwwfHwwfHx8MA%3D%3D"
                             alt="Premium eyewear showcase" class="img-responsive">
                     </div>
                 </div>
@@ -81,76 +73,56 @@
         <section class="section bg-light" id="offerings">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-title">Our Core Offerings</h2>
+                    <h2 class="section-title">Business Model</h2>
                     <div class="accent-line"></div>
                 </div>
                 <div class="ecosystem-grid">
                     <div class="ecosystem-card">
-                        <div class="ecosystem-icon">🎯</div>
-                        <h3>Redefining Eyewear</h3>
-                        <h4>Afro-modern Design</h4>
+                        <h3>Retail Partnerships(B2B)</h3>
                         <ul class="ecosystem-features">
-                            <li>Premium quality materials</li>
-                            <li>Cultural design elements</li>
-                            <li>Tech-enhanced lenses</li>
+                            <li>We place branded eyewear display stands in supermarkets, pharmacies, salons, and fuel
+                                stations.</li>
+                            <li>Revenue comes from wholesale sales or consignment revenue shares with the retailers.
+                            </li>
+                            <li>Retailer earns, we control branding and product quality.</li>
                         </ul>
                     </div>
 
                     <div class="ecosystem-card">
-                        <div class="ecosystem-icon">🏪</div>
-                        <h3>The Future of Retail</h3>
-                        <h4>Innovation at Every Step</h4>
+                        <h3>Flagship Store (D2C)</h3>
                         <ul class="ecosystem-features">
-                            <li>AI-powered try-ons</li>
-                            <li>Tele-optometry services</li>
-                            <li>Pop-up experiences</li>
+                            <li>We operate premium lifestyle stores with optometrists, personal styling, and curated
+                                frames.</li>
+                            <li>Revenue from frame + lens sales, consultations, and exclusive VIP services.</li>
                         </ul>
                     </div>
 
                     <div class="ecosystem-card">
-                        <div class="ecosystem-icon">👤</div>
-                        <h3>Your Vision, Your Statement</h3>
-                        <h4>Personal Expression</h4>
+                        <h3>E-Commerce</h3>
                         <ul class="ecosystem-features">
-                            <li>Customization options</li>
-                            <li>Style consultation</li>
-                            <li>Identity-focused design</li>
+                            <li>Online store with AI-driven virtual fittings, tele-optometry, and home delivery.</li>
+                            <li>Revenue from online frame sales, consults, and accessories.</li>
                         </ul>
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Vision Section -->
-        <section class="section" id="vision">
-            <div class="container">
-                <div class="section-header">
-                    <h2 class="section-title">The Road Ahead</h2>
-                    <div class="accent-line"></div>
-                </div>
-                <div class="journey-timeline">
-                    <div class="timeline-phase">
-                        <h3>Phase 1: Foundation</h3>
-                        <ul>
-                            <li>E-commerce platform launch</li>
-                            <li>Core collection release</li>
-                            <li>Digital try-on technology</li>
+                    <div class="ecosystem-card">
+                        <h3>Subscriptions & Loyalty Programs</h3>
+                        <ul class="ecosystem-features">
+                            <li>Customers subscribe for multiple frames per year or service plans.</li>
+                            <li>Generates recurring revenue and customer retention.</li>
                         </ul>
                     </div>
-                    <div class="timeline-phase">
-                        <h3>Phase 2: Innovation</h3>
-                        <ul>
-                            <li>AI fitting technology</li>
-                            <li>Pop-up retail experiences</li>
-                            <li>Tele-optometry services</li>
+                    <div class="ecosystem-card">
+                        <h3>Corporate & Brand Collaborations (B2B)</h3>
+                        <ul class="ecosystem-features">
+                            <li>Strategic B2B sales to fashion stores, hotels, and corporate eye-care programs</li>
+                            <li>Revenue from bulk sales and branded collaborations.</li>
                         </ul>
                     </div>
-                    <div class="timeline-phase">
-                        <h3>Phase 3: Expansion</h3>
-                        <ul>
-                            <li>Lifestyle studios</li>
-                            <li>Pan-African presence</li>
-                            <li>Global partnerships</li>
+                    <div class="ecosystem-card">
+                        <h3>Social Impact Drives Loyalty</h3>
+                        <ul class="ecosystem-features">
+                            <li>Sustainable materials, frame donation programs, and community engagement enhance brand
+                                loyalty and access to impact funding</li>
                         </ul>
                     </div>
                 </div>
@@ -161,14 +133,7 @@
         <section class="cta section" id="contact">
             <div class="container">
                 <div class="cta-content">
-                    <h2>Partner with Ausum Appeals</h2>
-                    <p>Join us in redefining African eyewear and self-expression. Whether you're an investor, retailer,
-                        or potential partner, let's create something extraordinary together.</p>
-                    <div class="cta-buttons">
-                        <a href="#" class="btn btn-primary btn-large">Become a Partner</a>
-                        <a href="#" class="btn btn-secondary btn-large">Contact Us</a>
-                        <a href="index.html" class="btn btn-tertiary btn-large">Explore Ausum Group</a>
-                    </div>
+                    <h2>Distrupting Normal, Designing Legacy</h2>
                 </div>
             </div>
         </section>
