--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@
                         <div class="method-icon">📧</div>
                         <h3>Email Us Directly</h3>
                         <p>For immediate inquiries</p>
-                        <a href="mailto:hello@ausumgroup.com" class="btn btn-tertiary">hello@ausumgroup.com</a>
+                        <!-- <a href="mailto:hello@ausumgroup.com" class="btn btn-tertiary">hello@ausumgroup.com</a> -->
                     </div>
 
                     <div class="contact-method">
@@ -159,7 +159,7 @@
                         <div class="method-icon">📰</div>
                         <h3>Newsletter</h3>
                         <p>Get exclusive updates</p>
-                        <a href="index.html#contact" class="btn btn-tertiary">Subscribe Now</a>
+                        <!-- <a href="index.html#contact" class="btn btn-tertiary">Subscribe Now</a> -->
                     </div>
                 </div>
             </div>
