--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         </div>
         <div class="about-content">
           <div class="about-text">
-            <p class="about-intro">Ausum Group is cultivating an authentic lifestyle ecosystem founded on African
-              creativity, innovation, and entrepreneurial spirit. We're building brands that embody our continental
-              heritage while solving everyday challenges.</p>
+            <p class="about-intro">Ausum Group is building a bold, modern lifestyle ecosystem driven by intelligent
+              design with purposeful focus through high-Impact brands in enterprise, media, beauty and fashion. We
+              empower a generation to live with intention, elegance and purpose.</p>
             <blockquote class="quote">
               <p>"Until the Lions have thier own historians, the history of the hunt will always glorify the hunter"</p>
               <cite>— Chinua Achebe</cite>
@@ -97,14 +97,13 @@
           </div>
           <div class="mission-text">
             <h3>Turning Ideas into Impact</h3>
-            <p>We're on a mission to create African-inspired solutions that address real needs while celebrating our
-              rich heritage. Ausum Group is building a sustainable ecosystem of brands and businesses that empower
-              communities and inspire the next generation of African entrepreneurs.</p>
+            <p>We turn bold ideas into imapct by providing foundational structures whereby sustainable solutions thrive.
+              At Ausum Group, we are cultivating a vibrant community of builders and problem solvers-fueling
+              entrepreneurship and championing the next generation of African leaders.</p>
             <ul class="mission-list">
-              <li>Creating authentic African brands with global appeal</li>
+              <li>Creating authentic brands with global appeal</li>
               <li>Developing scalable business frameworks</li>
               <li>Producing inspirational content that shifts narratives</li>
-              <li>Empowering women and families through innovation</li>
               <li>Implementing practical local solutions to everyday challenges</li>
             </ul>
           </div>
@@ -121,59 +120,59 @@
           <div class="accent-line"></div>
         </div>
         <div class="pillar-container">
-          <a href="nexus.html" class="pillar-card">
-            <div class="pillar-icon" data-icon="nexus"></div>
-            <h3>Ausum Nexus Ltd</h3>
-            <ul>
-              <li>Innovation hub</li>
-              <li>Eyewear distribution</li>
-              <li>Strategy consulting</li>
-            </ul>
-            <div class="pillar-overlay">
-              <p>Our flagship company driving innovation and business growth across multiple sectors.</p>
-              <button class="btn btn-secondary">Learn More</button>
-            </div>
-          </a>
-
           <a href="appeals.html" class="pillar-card">
             <div class="pillar-icon" data-icon="appeals"></div>
             <h3>Ausum Appeals</h3>
             <ul>
-              <li>Premium eyewear</li>
-              <li>Lifestyle brand</li>
-              <li>African-inspired design</li>
+              <li>Eyewear with purpose and personality</li>
+              <li>Curated with intention, chosen for quality</li>
+              <li>Reimagining eyewear retial in Africa</li>
             </ul>
             <div class="pillar-overlay">
-              <p>Authentic African eyewear and lifestyle products that combine style, quality, and cultural heritage.
+              <p>A premium eyewear and lifestyle brand inspiring confidence, self-expression and intentional living.
               </p>
               <button class="btn btn-secondary">Learn More</button>
             </div>
           </a>
-
+          <a href="nexus.html" class="pillar-card">
+            <div class="pillar-icon" data-icon="nexus"><img src="/ausum-nexus-logo.svg" alt="ausun nexus logo"></div>
+            <h3>Ausum Nexus</h3>
+            <ul>
+              <li>Venture incubation and partnerships</li>
+              <li>Business capacity building</li>
+              <li>Strategic Advisory</li>
+            </ul>
+            <div class="pillar-overlay">
+              <p>A consulting, business development and financial literacy hub empowering entrepreneurs and SME's to
+                build scalable, future-ready African businesses.</p>
+              <button class="btn btn-secondary">Learn More</button>
+            </div>
+          </a>
           <a href="studios.html" class="pillar-card">
             <div class="pillar-icon" data-icon="studios"></div>
             <h3>Ausum Studios</h3>
             <ul>
-              <li>Content creation</li>
-              <li>Brand development</li>
-              <li>Creative services</li>
+              <li>Authentic storytelling</li>
+              <li>Intentional brand building</li>
+              <li>Media that shapes culture</li>
             </ul>
             <div class="pillar-overlay">
-              <p>Our creative powerhouse producing compelling content that drives growth across the ecosystem.</p>
+              <p>A digital storytelling and media platform creating content that elevates culture, inspires growth and
+                connects purpose driven narratives.</p>
               <button class="btn btn-secondary">Learn More</button>
             </div>
           </a>
-
           <a href="just.html" class="pillar-card">
             <div class="pillar-icon" data-icon="just"></div>
             <h3>Just Ausum</h3>
             <ul>
-              <li>Personal brand</li>
-              <li>Podcast</li>
-              <li>Inspirational content</li>
+              <li>Lifestyle with intention</li>
+              <li>Faith-led personal growth</li>
+              <li>Bold, honest story telling</li>
             </ul>
             <div class="pillar-overlay">
-              <p>Content platform sharing inspirational stories and insights from African innovators and entrepreneurs.
+              <p>A dynamic personal brand exploring lifestyle, leadership, and legacy through storytelling and
+                self-expression.
               </p>
               <button class="btn btn-secondary">Learn More</button>
             </div>
@@ -286,22 +285,22 @@
           <div class="benefit-card">
             <div class="benefit-icon" data-icon="clarity"><i class="fa-solid fa-eye"></i></div>
             <h3>Clarity</h3>
-            <p>Of vision, purpose and sight</p>
+            <p>Seeing yourself and your path with truth and intention.</p>
           </div>
           <div class="benefit-card">
-            <div class="benefit-icon" data-icon="ownership"><i class="fa-solid fa-house"></i></div>
+            <div class="benefit-icon" data-icon="ownership"><i class="fa-solid fa-hand-fist"></i></div>
             <h3>Ownership</h3>
-            <p>Of one's identity, narractive entrepreneurial journey, and future</p>
+            <p>Taking full responsibility for your choices, growth and direction</p>
           </div>
           <div class="benefit-card">
             <div class="benefit-icon" data-icon="freedom"><i class="fa-solid fa-dove"></i></div>
             <h3>Freedom</h3>
-            <p>To express oneself authentically, to inovate, and to pursue a life of meaning</p>
+            <p>Living untangled from fear, ego, or societal limits.</p>
           </div>
           <div class="benefit-card">
             <div class="benefit-icon" data-icon="connection"><i class="fa-solid fa-handshake"></i></div>
             <h3>Connection</h3>
-            <p>To heritage, to community, to global trends and to personal growth</p>
+            <p>Living in meaningful relationships with self, others, and something greater.</p>
           </div>
         </div>
       </div>
@@ -314,16 +313,16 @@
           <h2>This isn't just funding. It's fuel for a movement.</h2>
           <p>Join us in building an African business ecosystem that inspires and empowers the next generation.</p>
           <div class="cta-buttons">
-            <a href="#" class="btn btn-secondary btn-large">Contact Us</a>
+            <a href="/contact.html" class="btn btn-secondary btn-large">Contact Us</a>
           </div>
-          <div class="newsletter">
+          <!-- <div class="newsletter">
             <h3>Stay Updated</h3>
             <p>Subscribe to our newsletter for exclusive updates and opportunities.</p>
             <form class="newsletter-form">
               <input type="email" placeholder="Your email address" required>
               <button type="submit" class="btn btn-tertiary">Subscribe</button>
             </form>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
