--- a/just.html
+++ b/just.html
@@ -28,10 +28,8 @@
                 </div>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="#overview" class="nav-link">Overview</a></li>
-                    <li><a href="#offerings" class="nav-link">Offerings</a></li>
-                    <li><a href="#vision" class="nav-link">Vision</a></li>
-                    <li><a href="#contact" class="nav-link">Contact</a></li>
+                    <li><a href="#overview" class="nav-link">Vision</a></li>
+                    <li><a href="#offerings" class="nav-link">Model</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,14 +37,12 @@
 
     <main>
         <!-- Hero Section -->
-        <section class="hero" id="hero"
-            style="background-image: url('https://images.pexels.com/photos/3184292/pexels-photo-3184292.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');">
+        <section class="hero" id="hero" style="background-image: url('/dennis-just-img.jpg');">
             <div class="hero-overlay"></div>
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">Inspire. Connect. Evolve.</h1>
-                    <p class="hero-subtitle">Building a community of purpose-driven individuals living the Ausum Life.
-                    </p>
+                    <h1 class="hero-title">Living The Ausum Life</h1>
+                    <p class="hero-subtitle">A personal brand at the intersection of purpose, power, and presence</p>
                 </div>
             </div>
         </section>
@@ -60,18 +56,18 @@
                 </div>
                 <div class="about-content">
                     <div class="about-text">
-                        <p class="about-intro">Just Ausum is more than a platform—it's a movement. We create content and
-                            experiences that inspire authentic living, foster meaningful connections, and celebrate the
-                            journey of personal growth.</p>
-                        <blockquote class="quote">
-                            <p>"Life becomes extraordinary when we embrace our authentic selves and inspire others to do
-                                the same."</p>
-                            <cite>— Just Ausum Team</cite>
-                        </blockquote>
+                        <p class="about-intro">Just Ausum is the living expression of Dennis Musau — a bold, grounded,
+                            and intentional brand that exists to inspire, influence, and impact lives across Africa and
+                            beyond through creativity, intellect, style, and storytelling.
+                            It’s not just content. It’s conviction, character, and clarity</p>
+                        <p class="about-intro">Dennis Musau is more than the founder of Ausum Group. He is the living
+                            embodiment of what it means to build intentionally — a man of style, substance, and
+                            spiritual strength. A grounded thinker with a visionary edge. Charismatic yet calculated.
+                            He turns pain into purpose, vision into ventures, and everyday moments into movements. Just
+                            Ausum is the lens through which he shares this light</p>
                     </div>
                     <div class="about-image">
-                        <img src="https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg"
-                            alt="Community connection" class="img-responsive">
+                        <img src="/dennis-just-img.jpg" alt="Community connection" class="img-responsive">
                     </div>
                 </div>
             </div>
@@ -81,76 +77,39 @@
         <section class="section bg-light" id="offerings">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-title">Our Core Offerings</h2>
+                    <h2 class="section-title">Business Model</h2>
                     <div class="accent-line"></div>
                 </div>
                 <div class="ecosystem-grid">
                     <div class="ecosystem-card">
-                        <div class="ecosystem-icon">✨</div>
                         <h3>Thriving Life Content</h3>
-                        <h4>Inspiration Hub</h4>
                         <ul class="ecosystem-features">
-                            <li>Personal development</li>
-                            <li>Lifestyle content</li>
-                            <li>Success stories</li>
+                            <li><strong>Monetizable Channels:</strong></li>
+                            <li>Podcast – <em>Broken Vessels</em>: Spiritual, personal, and intellectual guidance
+                            </li>
+                            <li>YouTube / IG / TikTok: Lifestyle, thought leadership, style, fitness</li>
+                            <li>Voice Notes & Writing: Raw, real, and reflective content series</li>
+                            <li><strong>Revenue Streams:</strong> Sponsorships, brand deals, affiliate partnerships,
+                                paid subscriptions</li>
                         </ul>
                     </div>
 
                     <div class="ecosystem-card">
-                        <div class="ecosystem-icon">🌍</div>
-                        <h3>Global Community</h3>
-                        <h4>Connection Platform</h4>
+                        <h3> Brand Collaborations & Ambassadorships</h3>
                         <ul class="ecosystem-features">
-                            <li>Events & meetups</li>
-                            <li>Online forums</li>
-                            <li>Mentorship programs</li>
+                            <li>Strategic alignment with luxury, lifestyle, wellness, fashion, and fintech brands</li>
+                            <li>Endorsements, appearances, and campaigns tied to Dennis’ authentic values and following
+                            </li>
                         </ul>
                     </div>
 
                     <div class="ecosystem-card">
-                        <div class="ecosystem-icon">💫</div>
-                        <h3>Living Ausum Values</h3>
-                        <h4>Cultural Impact</h4>
+                        <h3>Signature Products & Experiences</h3>
                         <ul class="ecosystem-features">
-                            <li>Value-based content</li>
-                            <li>Cultural celebration</li>
-                            <li>Impact initiatives</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Vision Section -->
-        <section class="section" id="vision">
-            <div class="container">
-                <div class="section-header">
-                    <h2 class="section-title">The Road Ahead</h2>
-                    <div class="accent-line"></div>
-                </div>
-                <div class="journey-timeline">
-                    <div class="timeline-phase">
-                        <h3>Phase 1: Foundation</h3>
-                        <ul>
-                            <li>Content platform launch</li>
-                            <li>Community building</li>
-                            <li>Core values establishment</li>
-                        </ul>
-                    </div>
-                    <div class="timeline-phase">
-                        <h3>Phase 2: Growth</h3>
-                        <ul>
-                            <li>Event series launch</li>
-                            <li>Mentorship program</li>
-                            <li>Digital expansion</li>
-                        </ul>
-                    </div>
-                    <div class="timeline-phase">
-                        <h3>Phase 3: Impact</h3>
-                        <ul>
-                            <li>Global community</li>
-                            <li>Impact initiatives</li>
-                            <li>Cultural movement</li>
+                            <li><strong>Ausum Card Game:</strong> for self-discovery & growth</li>
+                            <li>Live Events / Retreats / Speaking Engagements</li>
+                            <li>Branded apparel, minimalist wearables, personal development journals</li>
+                            <li>Books / Courses / Merch</li>
                         </ul>
                     </div>
                 </div>
@@ -163,11 +122,6 @@
                 <div class="cta-content">
                     <h2>Join the Ausum Movement</h2>
                     <p>Be part of a community that celebrates authenticity, growth, and purposeful living.</p>
-                    <div class="cta-buttons">
-                        <a href="#" class="btn btn-primary btn-large">Join Our Community</a>
-                        <a href="#" class="btn btn-secondary btn-large">Contact Us</a>
-                        <a href="index.html" class="btn btn-tertiary btn-large">Explore Ausum Group</a>
-                    </div>
                 </div>
             </div>
         </section>
