--- a/nexus.html
+++ b/nexus.html
@@ -28,10 +28,8 @@
                 </div>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="#overview" class="nav-link">Overview</a></li>
-                    <li><a href="#offerings" class="nav-link">Offerings</a></li>
-                    <li><a href="#vision" class="nav-link">Vision</a></li>
-                    <li><a href="#contact" class="nav-link">Contact</a></li>
+                    <li><a href="#overview" class="nav-link">Vision</a></li>
+                    <li><a href="#offerings" class="nav-link">Model</a></li>
                 </ul>
             </nav>
         </div>
@@ -60,14 +58,10 @@
                 </div>
                 <div class="about-content">
                     <div class="about-text">
-                        <p class="about-intro">Ausum Nexus is the strategic innovation hub of Ausum Group, dedicated to
-                            empowering African entrepreneurs and businesses with scalable frameworks, expert guidance,
-                            and innovative solutions.</p>
-                        <blockquote class="quote">
-                            <p>"Innovation isn't just about technology—it's about creating sustainable, scalable
-                                solutions that work for Africa."</p>
-                            <cite>— Ausum Nexus Team</cite>
-                        </blockquote>
+                        <p class="about-intro">Ausum Nexus Hub is the growth and innovation engine of Ausum Group —
+                            equipping African entrepreneurs with expert business advisory, sharp financial insight, and
+                            scalable systems. We incubate high-potential ventures through equity-aligned partnerships,
+                            driving bold transformation and long-term impact.</p>
                     </div>
                     <div class="about-image">
                         <img src="https://images.pexels.com/photos/3183183/pexels-photo-3183183.jpeg"
@@ -81,76 +75,47 @@
         <section class="section bg-light" id="offerings">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-title">Our Core Offerings</h2>
+                    <h2 class="section-title">Business Model</h2>
                     <div class="accent-line"></div>
                 </div>
                 <div class="ecosystem-grid">
                     <div class="ecosystem-card">
-                        <div class="ecosystem-icon">💡</div>
-                        <h3>SME Advisory</h3>
-                        <h4>Expert Guidance</h4>
+                        <h3>Advisory Services (Fee-Based)</h3>
+                        <h4>Businesses pay for expert support in:</h4>
                         <ul class="ecosystem-features">
-                            <li>Business strategy</li>
-                            <li>Growth planning</li>
-                            <li>Market analysis</li>
+                            <li>Business structuring & formalization</li>
+                            <li>Strategic planning & market positioning</li>
+                            <li>Financial modeling & projections</li>
+                            <li>Business plan & investment deck development</li>
+                            <li>Grant/funding readiness assessments</li>
                         </ul>
                     </div>
 
                     <div class="ecosystem-card">
-                        <div class="ecosystem-icon">🚀</div>
-                        <h3>Venture Incubation</h3>
-                        <h4>Building Success</h4>
+                        <h3>Workshops & Programs (Recurring Income)</h3>
                         <ul class="ecosystem-features">
-                            <li>Startup support</li>
-                            <li>Resource allocation</li>
-                            <li>Growth acceleration</li>
+                            <li>Paid masterclasses, bootcamps, and webinars</li>
+                            <li>Subscription access to toolkits, templates, and digital products</li>
+                            <li>Corporate trainings and SME capacity-building programs</li>
                         </ul>
                     </div>
 
                     <div class="ecosystem-card">
-                        <div class="ecosystem-icon">⚡</div>
-                        <h3>Innovation Core</h3>
-                        <h4>Future-Ready Solutions</h4>
+                        <h3>Equity-Based Incubation (Long-Term Upside)</h3>
                         <ul class="ecosystem-features">
-                            <li>Digital transformation</li>
-                            <li>Process optimization</li>
-                            <li>Technology integration</li>
+                            <li>We select promising businesses for hands-on incubation in exchange for equity (5%–15%
+                                depending on scope).</li>
+                            <li>Support includes strategy, capital access, branding, go-to-market, and tech integration.
+                            </li>
+                            <li>Exit potential through future fundraising rounds, dividends, or acquisition.</li>
                         </ul>
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Vision Section -->
-        <section class="section" id="vision">
-            <div class="container">
-                <div class="section-header">
-                    <h2 class="section-title">The Road Ahead</h2>
-                    <div class="accent-line"></div>
-                </div>
-                <div class="journey-timeline">
-                    <div class="timeline-phase">
-                        <h3>Phase 1: Foundation</h3>
-                        <ul>
-                            <li>Advisory services launch</li>
-                            <li>Partner network development</li>
-                            <li>Core methodology establishment</li>
-                        </ul>
-                    </div>
-                    <div class="timeline-phase">
-                        <h3>Phase 2: Expansion</h3>
-                        <ul>
-                            <li>Incubator program launch</li>
-                            <li>Digital platform development</li>
-                            <li>Regional partnerships</li>
-                        </ul>
-                    </div>
-                    <div class="timeline-phase">
-                        <h3>Phase 3: Scale</h3>
-                        <ul>
-                            <li>Pan-African presence</li>
-                            <li>Innovation hub network</li>
-                            <li>Global partnerships</li>
+                    <div class="ecosystem-card">
+                        <h3>Partnered Projects & Sponsored Initiatives</h3>
+                        <ul class="ecosystem-features">
+                            <li>Collaborations with NGOs, financial institutions, or development partners to run
+                                business transformation programs for MSMEs.</li>
+                            <li>Revenue via service contracts or facilitation fees.</li>
                         </ul>
                     </div>
                 </div>
@@ -161,14 +126,7 @@
         <section class="cta section" id="contact">
             <div class="container">
                 <div class="cta-content">
-                    <h2>Partner with Ausum Nexus</h2>
-                    <p>Are you an entrepreneur seeking strategic partners? Let's collaborate to build something
-                        extraordinary.</p>
-                    <div class="cta-buttons">
-                        <a href="#" class="btn btn-primary btn-large">Start Your Journey</a>
-                        <a href="#" class="btn btn-secondary btn-large">Contact Us</a>
-                        <a href="index.html" class="btn btn-tertiary btn-large">Explore Ausum Group</a>
-                    </div>
+                    <h2>Distrupting Normal, Designing Legacy</h2>
                 </div>
             </div>
         </section>
