--- a/studios.html
+++ b/studios.html
@@ -28,10 +28,8 @@
                 </div>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="#overview" class="nav-link">Overview</a></li>
-                    <li><a href="#offerings" class="nav-link">Offerings</a></li>
-                    <li><a href="#vision" class="nav-link">Vision</a></li>
-                    <li><a href="#contact" class="nav-link">Contact</a></li>
+                    <li><a href="#overview" class="nav-link">Vision</a></li>
+                    <li><a href="#offerings" class="nav-link">Model</a></li>
                 </ul>
             </nav>
         </div>
@@ -44,9 +42,8 @@
             <div class="hero-overlay"></div>
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">Crafting Narratives. Amplifying Voices.</h1>
-                    <p class="hero-subtitle">Where African stories come to life through compelling content and creative
-                        excellence.</p>
+                    <h1 class="hero-title">Where African Stories Power Strategy</h1>
+                    <p class="hero-subtitle">Creative content that captures, converts, and connects.</p>
                 </div>
             </div>
         </section>
@@ -60,14 +57,9 @@
                 </div>
                 <div class="about-content">
                     <div class="about-text">
-                        <p class="about-intro">Ausum Studios is the creative powerhouse of Ausum Group, dedicated to
-                            producing compelling content that drives growth across our ecosystem while celebrating
-                            African creativity and innovation.</p>
-                        <blockquote class="quote">
-                            <p>"Every brand has a story. We make sure it's told in a way that resonates and inspires."
-                            </p>
-                            <cite>— Ausum Studios Team</cite>
-                        </blockquote>
+                        <p class="about-intro">Ausum Studios is the creative powerhouse of Ausum Group — producing
+                            strategic, high-impact content that fuels brand growth, celebrates African stories, and
+                            delivers world-class media solutions for businesses ready to stand out</p>
                     </div>
                     <div class="about-image">
                         <img src="https://images.pexels.com/photos/2608516/pexels-photo-2608516.jpeg"
@@ -81,76 +73,63 @@
         <section class="section bg-light" id="offerings">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-title">Our Core Offerings</h2>
+                    <h2 class="section-title">Business Model</h2>
                     <div class="accent-line"></div>
                 </div>
                 <div class="ecosystem-grid">
                     <div class="ecosystem-card">
-                        <div class="ecosystem-icon">🎬</div>
-                        <h3>Ecosystem Storytelling</h3>
-                        <h4>Brand Narratives</h4>
+                        <h3>In-House Content Production (Internal IP support)</h3>
                         <ul class="ecosystem-features">
-                            <li>Visual storytelling</li>
-                            <li>Brand development</li>
-                            <li>Content strategy</li>
+                            <li><strong>Produce all branded content for Ausum Group:</strong>
+
+                                Just Ausum (personal brand),
+
+                                Ausum Appeals (eyewear campaigns),
+
+                                Ausum Nexus Hub (training content, webinars)
+                            </li>
+                            <li>Supports Internal visibility, storytelling, and brand equity (cost-saving + brand
+                                control)</li>
                         </ul>
                     </div>
 
                     <div class="ecosystem-card">
-                        <div class="ecosystem-icon">📱</div>
-                        <h3>Afro-Modern Content</h3>
-                        <h4>Digital Excellence</h4>
+                        <h3>Commercial Media Services (Fee-for-Service)</h3>
                         <ul class="ecosystem-features">
-                            <li>Social media content</li>
-                            <li>Digital campaigns</li>
-                            <li>Video production</li>
+                            <li><strong>Professional content creation for external businesses:</strong>
+
+                                Brand storytelling & documentaries,
+
+                                Social media & digital ads,
+
+                                Podcasts, YouTube shows, short-form video,
+
+                                Photography and product shoots,
+
+                                Voiceovers, scripts, event coverage.
+                            </li>
+                            <li>Tiered packages fro startups, SMEs and corporates</li>
                         </ul>
                     </div>
 
                     <div class="ecosystem-card">
-                        <div class="ecosystem-icon">🎨</div>
-                        <h3>Creative Hub</h3>
-                        <h4>Innovation Center</h4>
+                        <h3>Studio Rental & Talent Access</h3>
                         <ul class="ecosystem-features">
-                            <li>Design services</li>
-                            <li>Creative direction</li>
-                            <li>Brand workshops</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
+                            <li><strong>Monetize space and equipment:</strong>
 
-        <!-- Vision Section -->
-        <section class="section" id="vision">
-            <div class="container">
-                <div class="section-header">
-                    <h2 class="section-title">The Road Ahead</h2>
-                    <div class="accent-line"></div>
-                </div>
-                <div class="journey-timeline">
-                    <div class="timeline-phase">
-                        <h3>Phase 1: Foundation</h3>
-                        <ul>
-                            <li>Core team assembly</li>
-                            <li>Equipment acquisition</li>
-                            <li>Process establishment</li>
+                                Rent studio and production gear
+
+                                Hire Ausum Studios talent (videographers, editors, producers)
+                            </li>
+                            <li>Ideal for influencers, podcasters, agencies and freelancers</li>
                         </ul>
                     </div>
-                    <div class="timeline-phase">
-                        <h3>Phase 2: Growth</h3>
-                        <ul>
-                            <li>Portfolio expansion</li>
-                            <li>Client partnerships</li>
-                            <li>Service diversification</li>
-                        </ul>
-                    </div>
-                    <div class="timeline-phase">
-                        <h3>Phase 3: Innovation</h3>
-                        <ul>
-                            <li>Creative tech integration</li>
-                            <li>Regional expansion</li>
-                            <li>Industry leadership</li>
+                    <div class="ecosystem-card">
+                        <h3>Content Licensing & Distribution (Long-term Potential)</h3>
+                        <h4>Create original IP for monetization:</h4>
+                        <ul class="ecosystem-features">
+                            <li>Podcasts, docu-series, short films, licensed content</li>
+                            <li>Revenue through ads, sponsorships, YouTube monetization, or partnerships</li>
                         </ul>
                     </div>
                 </div>
@@ -163,11 +142,6 @@
                 <div class="cta-content">
                     <h2>Create with Ausum Studios</h2>
                     <p>Ready to bring your brand story to life? Let's create content that captures hearts and minds.</p>
-                    <div class="cta-buttons">
-                        <a href="#" class="btn btn-primary btn-large">Start a Project</a>
-                        <a href="#" class="btn btn-secondary btn-large">Contact Us</a>
-                        <a href="index.html" class="btn btn-tertiary btn-large">Explore Ausum Group</a>
-                    </div>
                 </div>
             </div>
         </section>
