--- a/invest.html
+++ b/invest.html
@@ -28,10 +28,8 @@
                 </div>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="#why-invest" class="nav-link">Why Invest</a></li>
                     <li><a href="#funding-roadmap" class="nav-link">Funding Roadmap</a></li>
-                    <li><a href="#vision" class="nav-link">Vision</a></li>
-                    <li><a href="#contact" class="nav-link">Contact</a></li>
+                    <li><a href="/contact.html" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,68 +37,22 @@
 
     <main>
         <!-- Hero Section -->
-        <!-- <section class="hero" id="hero"
-            style="background-image: url('https://images.pexels.com/photos/3184465/pexels-photo-3184465.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');">
+        <section class="invest-hero" id="hero">
             <div class="hero-overlay"></div>
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">Invest in Africa's Boldest Lifestyle Transformation</h1>
-                    <p class="hero-subtitle">Rooted in Afro-modern identity and driven by innovation, Ausum Group is
-                        building a globally resonant lifestyle ecosystem—blending premium eyewear, strategic ventures,
-                        and creative storytelling.</p>
-                    <div class="hero-cta">
-                        <a href="#funding-roadmap" class="btn btn-primary">Become a Founding Contributor</a>
-                        <a href="#why-invest" class="btn btn-secondary">Learn More</a>
-                    </div>
+                    <h1 class="hero-title">Invest in the Vision,<br> Build Legacy.</h1>
                 </div>
             </div>
-        </section> -->
-
-        <!-- Why Invest Section -->
-        <!-- <section class="section" id="why-invest">
-            <div class="container">
-                <div class="section-header">
-                    <h2 class="section-title">Why Ausum, Why Now</h2>
-                    <div class="accent-line"></div>
-                </div>
-                <div class="about-content">
-                    <div class="about-text">
-                        <p class="about-intro">With proven traction and a scalable model, your investment will power our
-                            expansion and fuel a 10x revenue growth by 2026. Join us in building a globally recognized
-                            African lifestyle brand—one that inspires, empowers, and redefines aspirational living.</p>
-                    </div>
-                    <div class="about-image">
-                        <img src="https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg"
-                            alt="Investment opportunity" class="img-responsive">
-                    </div>
-                </div>
-                <div class="investment-value-grid">
-                    <div class="value-card">
-                        <div class="value-icon">📈</div>
-                        <h3>10x Revenue Growth Potential</h3>
-                        <p>Scalable business model with proven market validation and clear expansion pathway.</p>
-                    </div>
-                    <div class="value-card">
-                        <div class="value-icon">🧠</div>
-                        <h3>Proven Market Traction</h3>
-                        <p>Ksh 1,036,000 in eyewear revenue generated in just 8 months with strong customer retention.
-                        </p>
-                    </div>
-                    <div class="value-card">
-                        <div class="value-icon">🌍</div>
-                        <h3>Afro-modern Vision with Global Appeal</h3>
-                        <p>Authentic African brand positioned for continental and international expansion.</p>
-                    </div>
-                </div>
-            </div>
-        </section> -->
+        </section>
 
         <!-- Strategic Funding Roadmap Section -->
         <section class="section bg-light" id="funding-roadmap">
             <div class="container">
                 <div class="section-header">
                     <h2 class="section-title">Our Funding Phases</h2>
-                    <p class="section-subtitle">Our funding strategy is phased and milestone-based—designed to reduce risk and
+                    <p class="section-subtitle">Our funding strategy is phased and milestone-based—designed to reduce
+                        risk and
                         maximize investor value.</p>
                     <div class="accent-line"></div>
                 </div>
@@ -108,28 +60,34 @@
                     <div class="funding-phase current">
                         <div class="phase-number seed">
                             <div class="phase-number-text">Seed</div>
-                            <div class="phase-amount-shape">$20,000</div>
+                            <div class="phase-amount-shape">$35,000</div>
                         </div>
                         <div class="phase-header">
-                            <h3>Now: Seed Round – Igniting the Ausum Engine</h3>
+                            <h3>Now: Seed Round</h3>
                         </div>
                         <div class="phase-timeline">
-                            <strong>Timeframe:</strong> June 2025 – December 2026
+                            <strong>Timeframe:</strong> June 2025 – December 2026<br>
+                            <strong>Purpose:</strong> Prove concept & validate profitability across 3 pillars
                         </div>
                         <div class="phase-content">
                             <h4>Use of Funds:</h4>
                             <ul class="phase-list">
-                                <li>Scale Ausum Appeals' wholesale traction</li>
-                                <li>Launch e-commerce MVP + retail pop-ups</li>
-                                <li>Develop infrastructure for Ausum Nexus, Studios, Just Ausum</li>
+                                <li>Ausum Appeals: Launch product line, validate retail + wholesale model
+                                </li>
+                                <li>Ausum Studios: Build content engine (Just Ausum podcast, social media series)
+                                </li>
+                                <li>Nexus Hub: Pilot 1:1 consulting, create MVP of SME toolkit
+                                </li>
                             </ul>
                             <div class="phase-why">
-                                <h4>Why Now:</h4>
-                                <p>Validate profitability, reduce risk, and build launch velocity</p>
+                                <h4>Targets:</h4>
+                                <p>Angel investors, startup mentors, purpose-aligned professionals
+                                </p>
                             </div>
-                            <div class="phase-role">
-                                <h4>Your Role:</h4>
-                                <p>Join as a Founding Contributor and position early for exponential returns</p>
+                            <div class="phase-why">
+                                <h4>Milestone:</h4>
+                                <p>Break even on 1 venture, and establish audience & service traction for 2 others
+                                </p>
                             </div>
                             <div class="phase-cta">
                                 <a href="#contact" class="btn btn-primary">Join the Seed Round</a>
@@ -143,80 +101,72 @@
                             <div class="phase-amount-shape">$100,000</div>
                         </div>
                         <div class="phase-header">
-                            <h3>Next: Series A – Scaling Smart</h3>
+                            <h3>Next: Series A</h3>
                         </div>
                         <div class="phase-timeline">
-                            <strong>Trigger:</strong> MVP + early revenue success<br>
-                            <strong>Target Timeframe:</strong> Q2 2027
+                            <strong>Timeframe:</strong> Q2 2027<br>
+                            <strong>Purpose:</strong>Build operational capacity and scale across verticals
                         </div>
                         <div class="phase-content">
                             <h4>Use of Funds:</h4>
                             <ul class="phase-list">
-                                <li>Expand retail + inventory capacity</li>
-                                <li>Aggressive marketing and customer acquisition</li>
-                                <li>Operationalize Nexus and Studios</li>
+                                <li>Ausum Appeals: Expand team, retail footprint, and inventory capacity</li>
+                                <li>Ausum Studios: Scale media output (video, podcast, branded content), build audience
+                                    community
+                                </li>
+                                <li>Nexus Hub: Launch business development programs, online content, and service
+                                    platform</li>
                             </ul>
-                            <div class="phase-advantage">
-                                <h4>Investor Advantage:</h4>
-                                <p>Seed investors benefit from higher valuation momentum</p>
+                            <div class="phase-why">
+                                <h4>Targets:</h4>
+                                <p>Early-stage VCs, media-tech & consumer funds, Pan-African family offices</p>
+                            </div>
+                            <div class="phase-why">
+                                <h4>Milestone:</h4>
+                                <p>Build a sustainable, revenue-generating ecosystem reaching 10,000+ customers,
+                                    clients, and followers
+                                </p>
                             </div>
                         </div>
                     </div>
 
                     <div class="funding-phase future">
                         <div class="phase-number major">
-                            <div class="phase-number-text">Major</div>
+                            <div class="phase-number-text">Series B</div>
                             <div class="phase-amount-shape">$1,000,000</div>
                         </div>
                         <div class="phase-header">
-                            <h3>Future: Major Equity Round</h3>
+                            <h3>Future: Series B</h3>
                         </div>
                         <div class="phase-timeline">
-                            <strong>Target Timeframe:</strong> 2030
+                            <strong>Timeframe:</strong> 2030<br>
+                            <strong>Purpose:</strong> Expand regionally & integrate the ecosystem
                         </div>
                         <div class="phase-content">
                             <h4>Use of Funds:</h4>
                             <ul class="phase-list">
-                                <li>Enter international markets</li>
-                                <li>Build scalable infrastructure and tech</li>
-                                <li>Fund strategic partnerships and acquisitions</li>
+                                <li> Ausum Appeals: Launch flagship stores, scale wholesale ops across East Africa
+                                </li>
+                                <li> Ausum Studios: Build creative production studio, launch content network & regional
+                                    events
+                                </li>
+                                <li>Nexus Hub: Launch Build Ausum SME accelerator, partner with banks, develop B2B SaaS
+                                    tools
+                                </li>
                             </ul>
-                            <div class="phase-vision">
-                                <h4>Vision:</h4>
-                                <p>Establish Ausum Group as Africa's most iconic lifestyle powerhouse</p>
+                            <div class="phase-why">
+                                <h4>Targets:</h4>
+                                <p>Growth-stage VCs, strategic corporate investors, Pan-African PE firms</p>
+                            </div>
+                            <div class="phase-why">
+                                <h4>Milestone:</h4>
+                                <p>Position Ausum Group as East Africa’s most iconic lifestyle, media &
+                                    enterprise brand platform</p>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
-
-        <!-- Vision Section -->
-        <section class="section" id="vision">
-            <div class="container">
-                <div class="section-header">
-                    <h2 class="section-title">The Ausum Future</h2>
-                    <div class="accent-line"></div>
-                </div>
-                <div class="vision-content">
-                    <div class="vision-text">
-                        <p class="vision-intro">To become Africa's most iconic lifestyle group—fusing culture, commerce,
-                            and creativity at scale. Partner with us in shaping a new global standard for African
-                            ingenuity and lifestyle excellence.</p>
-                        <blockquote class="quote">
-                            <p>"This is more than our story; it's an invitation to see the world differently... and to
-                                co-create a future where African ingenuity and style inspire globally."</p>
-                            <cite>— Ausum Group Vision</cite>
-                        </blockquote>
-                    </div>
-                    <div class="vision-image">
-                        <img src="https://images.pexels.com/photos/3184292/pexels-photo-3184292.jpeg"
-                            alt="Future vision" class="img-responsive">
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <!-- Call to Action Section -->
         <section class="cta section" id="contact">
             <div class="container">
@@ -224,17 +174,7 @@
                     <h2>Join the Ascent</h2>
                     <p>Let's build something Ausum—together.</p>
                     <div class="cta-buttons">
-                        <a href="#" class="btn btn-primary btn-large">Explore Investment Opportunities</a>
-                        <a href="#" class="btn btn-secondary btn-large">Book a Discovery Call</a>
-                        <a href="#" class="btn btn-tertiary btn-large">Contact Our Team</a>
-                    </div>
-                    <div class="newsletter">
-                        <h3>Stay Connected</h3>
-                        <p>Subscribe to our investor newsletter for exclusive updates and opportunities.</p>
-                        <form class="newsletter-form">
-                            <input type="email" placeholder="Your email address" required>
-                            <button type="submit" class="btn btn-tertiary">Subscribe</button>
-                        </form>
+                        <a href="#" class="btn btn-tertiary btn-large">Contact</a>
                     </div>
                 </div>
             </div>
