--- a/just.html
+++ b/just.html
@@ -37,7 +37,8 @@
 
     <main>
         <!-- Hero Section -->
-        <section class="hero" id="hero" style="background-image: url('/dennis-just-img.jpg');">
+        <section class="hero" id="hero"
+            style="background-image: url('https://images.unsplash.com/photo-1548438294-1ad5d5f4f063?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8SW5zcGlyYXRpb25hbHxlbnwwfHwwfHx8MA%3D%3D');">
             <div class="hero-overlay"></div>
             <div class="container">
                 <div class="hero-content">
@@ -51,7 +52,7 @@
         <section class="section" id="overview">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-title">Content That Inspires Purposeful Living</h2>
+                    <h2 class="section-title">Inspiring Purposeful Living</h2>
                     <div class="accent-line"></div>
                 </div>
                 <div class="about-content">
