--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             <div class="hero-overlay"></div>
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">Destrupting Normal, Designing Legacy</h1>
+                    <h1 class="hero-title">Disrupting Normal, Designing Legacy</h1>
                     <!-- <p class="hero-subtitle">A new chapter in African lifestyle is being written — one that fuses
                         cultural authenticity, cutting-edge innovation, and holistic entrepreneurship. Here's how Ausum
                         Group is building it.</p> -->
