--- a/appeals.html
+++ b/appeals.html
@@ -133,7 +133,7 @@
         <section class="cta section" id="contact">
             <div class="container">
                 <div class="cta-content">
-                    <h2>Distrupting Normal, Designing Legacy</h2>
+                    <h2>Disrupting Normal, Designing Legacy</h2>
                 </div>
             </div>
         </section>
